--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=apache::wicket::bootstrap
 sonar.projectName=apache_wicket_bootstrap
+sonar.language=java
 #sonar.projectVersion=1.0
-sonar.sources=src
-sonar.binaries=target/classes
+sonar.sources=src/main/java/
+sonar.java.binaries=target/classes
 sonar.sourceEncoding=UTF-8
