--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<!-- TODO project name -->
 	<name>Wicket Application</name>
-	<description></description>
+	<description>Wicket Application</description>
 	<!-- <organization> <name>company name</name> <url>company url</url> </organization> -->
 	<licenses>
 		<license>
@@ -29,11 +29,11 @@
 		</license>
 	</licenses>
 	<properties>
-		<wicket.version>7.0.0</wicket.version>
-		<jetty9.version>9.2.11.v20150529</jetty9.version>
-		<log4j.version>2.3</log4j.version>
+		<wicket.version>9.2.0</wicket.version>
+		<jetty9.version>11.0.0</jetty9.version>
+		<log4j.version>2.14.0</log4j.version>
 		<junit.version>4.12</junit.version>
-		<de.agilecoders.wicket.version>0.10.3</de.agilecoders.wicket.version>
+		<de.agilecoders.wicket.version>4.0.2</de.agilecoders.wicket.version>
 		<maven.eclipse.plugins.version>2.10</maven.eclipse.plugins.version>
 		<maven.versions.plugin.version>2.2</maven.versions.plugin.version>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
@@ -188,8 +188,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
